Changement du banner ligne 757

--- a/css/style.css
+++ b/css/style.css
@@ -754,7 +754,7 @@
 	#banner
 	{
 		position: relative;
-		background: #333 url(../images/banner.jpg) no-repeat center;
+		background: #333 url(../images/AFAEDAM_perspective.bmp) no-repeat center;
 		background-size: cover;
 		color: #fff;
 	}
