--- a/css/style.css
+++ b/css/style.css
@@ -754,7 +754,7 @@
 	#banner
 	{
 		position: relative;
-		background: #333 url("../images/Maison en boisformat.jpg") no-repeat center;
+		background: #333 url(../images/Maison_en_boisformat.jpg) no-repeat center;
 		background-size: cover;
 		color: #fff;
 	}
