--- a/css/style.css
+++ b/css/style.css
@@ -665,7 +665,7 @@
 
 	#header
 	{
-		background: url(images/img01.jpg) repeat-x left top;
+		background: #151515 repeat-x left top;
 	}
 
 		#header .container
