changement de bannière salon japonais

--- a/css/style.css
+++ b/css/style.css
@@ -754,7 +754,7 @@
 	#banner
 	{
 		position: relative;
-		background: #333 url(../images/tori_retirer_ile.jpg) no-repeat center;
+		background: #333 url(../images/salonjaponais2.jpg) no-repeat center;
 		background-size: cover;
 		color: #fff;
 	}
